src/argocd/infra/base/common/argocd.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-ui
  namespace: argo-cd
spec:
  parentRefs:
    - name: contour-gateway-api
      namespace: contour-system
  hostnames: ["argocd.malickdevops.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-server
          port: 443
